var namespace_xu_m_q =
[
    [ "AsyncWorker", "class_xu_m_q_1_1_async_worker.html", "class_xu_m_q_1_1_async_worker" ],
    [ "basicAckRequest", "class_xu_m_q_1_1basic_ack_request.html", "class_xu_m_q_1_1basic_ack_request" ],
    [ "basicAckRequestDefaultTypeInternal", "struct_xu_m_q_1_1basic_ack_request_default_type_internal.html", "struct_xu_m_q_1_1basic_ack_request_default_type_internal" ],
    [ "basicCancelRequest", "class_xu_m_q_1_1basic_cancel_request.html", "class_xu_m_q_1_1basic_cancel_request" ],
    [ "basicCancelRequestDefaultTypeInternal", "struct_xu_m_q_1_1basic_cancel_request_default_type_internal.html", "struct_xu_m_q_1_1basic_cancel_request_default_type_internal" ],
    [ "basicConsumeRequest", "class_xu_m_q_1_1basic_consume_request.html", "class_xu_m_q_1_1basic_consume_request" ],
    [ "basicConsumeRequestDefaultTypeInternal", "struct_xu_m_q_1_1basic_consume_request_default_type_internal.html", "struct_xu_m_q_1_1basic_consume_request_default_type_internal" ],
    [ "basicConsumeResponse", "class_xu_m_q_1_1basic_consume_response.html", "class_xu_m_q_1_1basic_consume_response" ],
    [ "basicConsumeResponseDefaultTypeInternal", "struct_xu_m_q_1_1basic_consume_response_default_type_internal.html", "struct_xu_m_q_1_1basic_consume_response_default_type_internal" ],
    [ "BasicProperties", "class_xu_m_q_1_1_basic_properties.html", "class_xu_m_q_1_1_basic_properties" ],
    [ "BasicPropertiesDefaultTypeInternal", "struct_xu_m_q_1_1_basic_properties_default_type_internal.html", "struct_xu_m_q_1_1_basic_properties_default_type_internal" ],
    [ "basicPublishRequest", "class_xu_m_q_1_1basic_publish_request.html", "class_xu_m_q_1_1basic_publish_request" ],
    [ "basicPublishRequestDefaultTypeInternal", "struct_xu_m_q_1_1basic_publish_request_default_type_internal.html", "struct_xu_m_q_1_1basic_publish_request_default_type_internal" ],
    [ "basicResponse", "class_xu_m_q_1_1basic_response.html", "class_xu_m_q_1_1basic_response" ],
    [ "basicResponseDefaultTypeInternal", "struct_xu_m_q_1_1basic_response_default_type_internal.html", "struct_xu_m_q_1_1basic_response_default_type_internal" ],
    [ "Binding", "struct_xu_m_q_1_1_binding.html", "struct_xu_m_q_1_1_binding" ],
    [ "BindingManager", "class_xu_m_q_1_1_binding_manager.html", "class_xu_m_q_1_1_binding_manager" ],
    [ "BindingMapper", "class_xu_m_q_1_1_binding_mapper.html", "class_xu_m_q_1_1_binding_mapper" ],
    [ "Channel", "class_xu_m_q_1_1_channel.html", "class_xu_m_q_1_1_channel" ],
    [ "ChannelManager", "class_xu_m_q_1_1_channel_manager.html", "class_xu_m_q_1_1_channel_manager" ],
    [ "closeChannelRequest", "class_xu_m_q_1_1close_channel_request.html", "class_xu_m_q_1_1close_channel_request" ],
    [ "closeChannelRequestDefaultTypeInternal", "struct_xu_m_q_1_1close_channel_request_default_type_internal.html", "struct_xu_m_q_1_1close_channel_request_default_type_internal" ],
    [ "Connection", "class_xu_m_q_1_1_connection.html", "class_xu_m_q_1_1_connection" ],
    [ "ConnectionManager", "class_xu_m_q_1_1_connection_manager.html", "class_xu_m_q_1_1_connection_manager" ],
    [ "Consumer", "struct_xu_m_q_1_1_consumer.html", "struct_xu_m_q_1_1_consumer" ],
    [ "ConsumerManager", "class_xu_m_q_1_1_consumer_manager.html", "class_xu_m_q_1_1_consumer_manager" ],
    [ "declareExchangeRequest", "class_xu_m_q_1_1declare_exchange_request.html", "class_xu_m_q_1_1declare_exchange_request" ],
    [ "declareExchangeRequest_ArgsEntry_DoNotUse", "class_xu_m_q_1_1declare_exchange_request___args_entry___do_not_use.html", "class_xu_m_q_1_1declare_exchange_request___args_entry___do_not_use" ],
    [ "declareExchangeRequest_ArgsEntry_DoNotUseDefaultTypeInternal", "struct_xu_m_q_1_1declare_exchange_request___args_entry___do_not_use_default_type_internal.html", "struct_xu_m_q_1_1declare_exchange_request___args_entry___do_not_use_default_type_internal" ],
    [ "declareExchangeRequestDefaultTypeInternal", "struct_xu_m_q_1_1declare_exchange_request_default_type_internal.html", "struct_xu_m_q_1_1declare_exchange_request_default_type_internal" ],
    [ "declareQueueRequest", "class_xu_m_q_1_1declare_queue_request.html", "class_xu_m_q_1_1declare_queue_request" ],
    [ "declareQueueRequest_ArgsEntry_DoNotUse", "class_xu_m_q_1_1declare_queue_request___args_entry___do_not_use.html", "class_xu_m_q_1_1declare_queue_request___args_entry___do_not_use" ],
    [ "declareQueueRequest_ArgsEntry_DoNotUseDefaultTypeInternal", "struct_xu_m_q_1_1declare_queue_request___args_entry___do_not_use_default_type_internal.html", "struct_xu_m_q_1_1declare_queue_request___args_entry___do_not_use_default_type_internal" ],
    [ "declareQueueRequestDefaultTypeInternal", "struct_xu_m_q_1_1declare_queue_request_default_type_internal.html", "struct_xu_m_q_1_1declare_queue_request_default_type_internal" ],
    [ "deleteExchangeRequest", "class_xu_m_q_1_1delete_exchange_request.html", "class_xu_m_q_1_1delete_exchange_request" ],
    [ "deleteExchangeRequestDefaultTypeInternal", "struct_xu_m_q_1_1delete_exchange_request_default_type_internal.html", "struct_xu_m_q_1_1delete_exchange_request_default_type_internal" ],
    [ "deleteQueueRequest", "class_xu_m_q_1_1delete_queue_request.html", "class_xu_m_q_1_1delete_queue_request" ],
    [ "deleteQueueRequestDefaultTypeInternal", "struct_xu_m_q_1_1delete_queue_request_default_type_internal.html", "struct_xu_m_q_1_1delete_queue_request_default_type_internal" ],
    [ "Exchange", "struct_xu_m_q_1_1_exchange.html", "struct_xu_m_q_1_1_exchange" ],
    [ "ExchangeManager", "class_xu_m_q_1_1_exchange_manager.html", "class_xu_m_q_1_1_exchange_manager" ],
    [ "ExchangeMapper", "class_xu_m_q_1_1_exchange_mapper.html", "class_xu_m_q_1_1_exchange_mapper" ],
    [ "FileHelper", "class_xu_m_q_1_1_file_helper.html", "class_xu_m_q_1_1_file_helper" ],
    [ "LogInit", "class_xu_m_q_1_1_log_init.html", "class_xu_m_q_1_1_log_init" ],
    [ "Message", "class_xu_m_q_1_1_message.html", "class_xu_m_q_1_1_message" ],
    [ "Message_Payload", "class_xu_m_q_1_1_message___payload.html", "class_xu_m_q_1_1_message___payload" ],
    [ "Message_PayloadDefaultTypeInternal", "struct_xu_m_q_1_1_message___payload_default_type_internal.html", "struct_xu_m_q_1_1_message___payload_default_type_internal" ],
    [ "MessageDefaultTypeInternal", "struct_xu_m_q_1_1_message_default_type_internal.html", "struct_xu_m_q_1_1_message_default_type_internal" ],
    [ "MessageManager", "class_xu_m_q_1_1_message_manager.html", "class_xu_m_q_1_1_message_manager" ],
    [ "MessageMapper", "class_xu_m_q_1_1_message_mapper.html", "class_xu_m_q_1_1_message_mapper" ],
    [ "MsgQueue", "struct_xu_m_q_1_1_msg_queue.html", "struct_xu_m_q_1_1_msg_queue" ],
    [ "MsgQueueManager", "class_xu_m_q_1_1_msg_queue_manager.html", "class_xu_m_q_1_1_msg_queue_manager" ],
    [ "MsgQueueMapper", "class_xu_m_q_1_1_msg_queue_mapper.html", "class_xu_m_q_1_1_msg_queue_mapper" ],
    [ "openChannelRequest", "class_xu_m_q_1_1open_channel_request.html", "class_xu_m_q_1_1open_channel_request" ],
    [ "openChannelRequestDefaultTypeInternal", "struct_xu_m_q_1_1open_channel_request_default_type_internal.html", "struct_xu_m_q_1_1open_channel_request_default_type_internal" ],
    [ "queueBindRequest", "class_xu_m_q_1_1queue_bind_request.html", "class_xu_m_q_1_1queue_bind_request" ],
    [ "queueBindRequestDefaultTypeInternal", "struct_xu_m_q_1_1queue_bind_request_default_type_internal.html", "struct_xu_m_q_1_1queue_bind_request_default_type_internal" ],
    [ "QueueConsumer", "class_xu_m_q_1_1_queue_consumer.html", "class_xu_m_q_1_1_queue_consumer" ],
    [ "QueueMessage", "class_xu_m_q_1_1_queue_message.html", "class_xu_m_q_1_1_queue_message" ],
    [ "queueUnBindRequest", "class_xu_m_q_1_1queue_un_bind_request.html", "class_xu_m_q_1_1queue_un_bind_request" ],
    [ "queueUnBindRequestDefaultTypeInternal", "struct_xu_m_q_1_1queue_un_bind_request_default_type_internal.html", "struct_xu_m_q_1_1queue_un_bind_request_default_type_internal" ],
    [ "Router", "class_xu_m_q_1_1_router.html", "class_xu_m_q_1_1_router" ],
    [ "Server", "class_xu_m_q_1_1_server.html", "class_xu_m_q_1_1_server" ],
    [ "SqliteHelper", "class_xu_m_q_1_1_sqlite_helper.html", "class_xu_m_q_1_1_sqlite_helper" ],
    [ "StrHelper", "class_xu_m_q_1_1_str_helper.html", "class_xu_m_q_1_1_str_helper" ],
    [ "threadpool", "class_xu_m_q_1_1threadpool.html", "class_xu_m_q_1_1threadpool" ],
    [ "UUIDHelper", "class_xu_m_q_1_1_u_u_i_d_helper.html", "class_xu_m_q_1_1_u_u_i_d_helper" ],
    [ "VirtualHost", "class_xu_m_q_1_1_virtual_host.html", "class_xu_m_q_1_1_virtual_host" ],
    [ "VirtualHostManager", "class_xu_m_q_1_1_virtual_host_manager.html", "class_xu_m_q_1_1_virtual_host_manager" ],
    [ "basicAckRequestPtr", "namespace_xu_m_q.html#ab39ce3e363d0099a96f5dbd6cc015a3a", null ],
    [ "basicCancelRequestPtr", "namespace_xu_m_q.html#ab41d3233970b8aebb9f6c3afacb7ae97", null ],
    [ "basicConsumeRequestPtr", "namespace_xu_m_q.html#a6ed6e4d88651201cb80e8663c126881a", null ],
    [ "basicConsumeResponsePtr", "namespace_xu_m_q.html#a6766bf564e071e410564017f55981bc5", null ],
    [ "basicPublishRequestPtr", "namespace_xu_m_q.html#a1c2d37f29b085bb039a66be850deb33a", null ],
    [ "basicResponsePtr", "namespace_xu_m_q.html#a249ad23a3c0d6bd527a9a97eaba9dc40", null ],
    [ "BindingMap", "namespace_xu_m_q.html#a4970cc87d0e344f2b27f072e7172cff7", null ],
    [ "closeChannelRequestPtr", "namespace_xu_m_q.html#a7f682f5c4b91edfd21ce5157d20a7389", null ],
    [ "ConsumerCallback", "namespace_xu_m_q.html#aeb52900698873027742f14cdf3eaca75", null ],
    [ "declareExchangeRequestPtr", "namespace_xu_m_q.html#a565ef24c10d6161f8b3b238dfa1e2d38", null ],
    [ "declareQueueRequestPtr", "namespace_xu_m_q.html#a2e4a7a84ab7192fb25d36802a33764c1", null ],
    [ "deleteExchangeRequestPtr", "namespace_xu_m_q.html#afb55800cff4209ac359d352135e01c39", null ],
    [ "deleteQueueRequestPtr", "namespace_xu_m_q.html#a166fad7828585f198b54d4b4ee4f50e2", null ],
    [ "ExchangeMap", "namespace_xu_m_q.html#a2c80cb23e6fa300bd31a9226e982be18", null ],
    [ "MessagePtr", "namespace_xu_m_q.html#a204f831eee1caa49320850f9bb78bd3c", null ],
    [ "MsgQueueBindingMap", "namespace_xu_m_q.html#a7d6eb557023012c069ab5ee39728a677", null ],
    [ "openChannelRequestPtr", "namespace_xu_m_q.html#a0b66ac6ad7a71679dd35a34684b5d622", null ],
    [ "ProtobufCodecPtr", "namespace_xu_m_q.html#a9db4520e3c100e6eee86b0f86ad281b0", null ],
    [ "queueBindRequestPtr", "namespace_xu_m_q.html#ab93a9cc2dbab513d88f6e1eba78ae69e", null ],
    [ "QueueMap", "namespace_xu_m_q.html#ade8f8bc46e29f4519c0cd10e79b0cbbb", null ],
    [ "queueUnBindRequestPtr", "namespace_xu_m_q.html#a45cc9152b7fbd6416937b94f97ec813a", null ],
    [ "DeliveryMode", "namespace_xu_m_q.html#a0f608e8c800bb6737ae004b82a037614", [
      [ "UNKNOWMODE", "namespace_xu_m_q.html#a0f608e8c800bb6737ae004b82a037614a457929c044f0ea902e54568f57dffa20", null ],
      [ "UNDURABLE", "namespace_xu_m_q.html#a0f608e8c800bb6737ae004b82a037614a1575dc12622e36c0efa8a0fd8024e996", null ],
      [ "DURABLE", "namespace_xu_m_q.html#a0f608e8c800bb6737ae004b82a037614a5dc49c69b5e2ddae023a20edd108e785", null ],
      [ "DeliveryMode_INT_MIN_SENTINEL_DO_NOT_USE_", "namespace_xu_m_q.html#a0f608e8c800bb6737ae004b82a037614a73785b8fad265e73c6e97eedd299da12", null ],
      [ "DeliveryMode_INT_MAX_SENTINEL_DO_NOT_USE_", "namespace_xu_m_q.html#a0f608e8c800bb6737ae004b82a037614a7efa0db034ba790efb017d779fb4139a", null ]
    ] ],
    [ "ExchangeType", "namespace_xu_m_q.html#a4816a5c6a665a9846a019871c6310c7d", [
      [ "UNKNOWTYPE", "namespace_xu_m_q.html#a4816a5c6a665a9846a019871c6310c7da663837940118a6f44ae3cffba0b7396b", null ],
      [ "DIRECT", "namespace_xu_m_q.html#a4816a5c6a665a9846a019871c6310c7da6e18e7eb745d443ce711ef9f8d8f266b", null ],
      [ "FANOUT", "namespace_xu_m_q.html#a4816a5c6a665a9846a019871c6310c7dac1ddc7302c1649da01979aaf9a78397c", null ],
      [ "TOPIC", "namespace_xu_m_q.html#a4816a5c6a665a9846a019871c6310c7daa084eda8370385e513bc0599d3cc5811", null ],
      [ "ExchangeType_INT_MIN_SENTINEL_DO_NOT_USE_", "namespace_xu_m_q.html#a4816a5c6a665a9846a019871c6310c7daa5e0ea98977de98625e5d4264f155d29", null ],
      [ "ExchangeType_INT_MAX_SENTINEL_DO_NOT_USE_", "namespace_xu_m_q.html#a4816a5c6a665a9846a019871c6310c7da5cb83eacac883351df992b3a23317bc9", null ]
    ] ],
    [ "DeliveryMode_descriptor", "namespace_xu_m_q.html#a95aa4d1e125ff418c1889c4bfa8adebe", null ],
    [ "DeliveryMode_IsValid", "namespace_xu_m_q.html#a8471a456dc9ff20e672496443a8e1ecc", null ],
    [ "DeliveryMode_Name", "namespace_xu_m_q.html#abb33d9f6f89ddc80ac3a1a8725e20742", null ],
    [ "DeliveryMode_Parse", "namespace_xu_m_q.html#ae51bc0fa5f83234e4f1d74487bf2854f", null ],
    [ "ExchangeType_descriptor", "namespace_xu_m_q.html#a2c971809592dd833986ea839c7117091", null ],
    [ "ExchangeType_IsValid", "namespace_xu_m_q.html#a94172775e5713861e3987c3498000805", null ],
    [ "ExchangeType_Name", "namespace_xu_m_q.html#a19551a42380bad0bd8e9da78d7713864", null ],
    [ "ExchangeType_Parse", "namespace_xu_m_q.html#a4000c7e369b91bccbc052ec146a44004", null ],
    [ "_basicAckRequest_default_instance_", "namespace_xu_m_q.html#a17ee8f84e893473795c61ba34e912534", null ],
    [ "_basicCancelRequest_default_instance_", "namespace_xu_m_q.html#acf3efc9bb1ec3628777ef3af3db0602c", null ],
    [ "_basicConsumeRequest_default_instance_", "namespace_xu_m_q.html#a03b9a2c566171a2c69353352014d7878", null ],
    [ "_basicConsumeResponse_default_instance_", "namespace_xu_m_q.html#a091f30f5a9d3eea00b8e2f44e4a31666", null ],
    [ "_BasicProperties_default_instance_", "namespace_xu_m_q.html#a46760558817e80a1b7174413711c94fe", null ],
    [ "_basicPublishRequest_default_instance_", "namespace_xu_m_q.html#afdd2c2d8162651e4958fa0b4c2580985", null ],
    [ "_basicResponse_default_instance_", "namespace_xu_m_q.html#a006d12401b7aa8bc236eca515e4dccee", null ],
    [ "_closeChannelRequest_default_instance_", "namespace_xu_m_q.html#a5db9bb1caa2e0f164ca6efaa88e50d5b", null ],
    [ "_declareExchangeRequest_ArgsEntry_DoNotUse_default_instance_", "namespace_xu_m_q.html#ae68e318f82626df220ccb95c94491c6c", null ],
    [ "_declareExchangeRequest_default_instance_", "namespace_xu_m_q.html#af9840b1ab0545c21715dd85aee67166e", null ],
    [ "_declareQueueRequest_ArgsEntry_DoNotUse_default_instance_", "namespace_xu_m_q.html#a85b38df26a2b4c44ad6ef63267b91b67", null ],
    [ "_declareQueueRequest_default_instance_", "namespace_xu_m_q.html#a7bb3e0eedd2f55bbcffdd32c68ee543c", null ],
    [ "_deleteExchangeRequest_default_instance_", "namespace_xu_m_q.html#a7c290ce5223b77656aa17cc15ce3a8e4", null ],
    [ "_deleteQueueRequest_default_instance_", "namespace_xu_m_q.html#a0be19e975f58d0d0e1f2bae7dbe92064", null ],
    [ "_Message_default_instance_", "namespace_xu_m_q.html#ad0fa2d87e5282526884b9bb9aed28beb", null ],
    [ "_Message_Payload_default_instance_", "namespace_xu_m_q.html#a6433b2d0f7308ee83e364ece0cc9b319", null ],
    [ "_openChannelRequest_default_instance_", "namespace_xu_m_q.html#aea4c8df1396f5a29afba41df425b113d", null ],
    [ "_queueBindRequest_default_instance_", "namespace_xu_m_q.html#a07c98f804df54fe8eba2daa161b18517", null ],
    [ "_queueUnBindRequest_default_instance_", "namespace_xu_m_q.html#ac551ba242e2cae3ad3639c727fb01baa", null ],
    [ "DATAFILE_SUBFIX", "namespace_xu_m_q.html#a4c80748846b3a6c7d5b33e3383bcfd50", null ],
    [ "DBFILE", "namespace_xu_m_q.html#ac58c1b4f029e3459a7dbcdc73d135b3a", null ],
    [ "DeliveryMode_ARRAYSIZE", "namespace_xu_m_q.html#af91e7f144cf9ee19df8185bd66af20ad", null ],
    [ "DeliveryMode_MAX", "namespace_xu_m_q.html#a41a68167fd12001c392dfb64ba06cd62", null ],
    [ "DeliveryMode_MIN", "namespace_xu_m_q.html#a0d59c091a7c17e8dcbf03ef01831b7e2", null ],
    [ "ExchangeType_ARRAYSIZE", "namespace_xu_m_q.html#a5648bf7ee97db9af26596b6e4839a5a3", null ],
    [ "ExchangeType_MAX", "namespace_xu_m_q.html#ab2e0bbec536a93a55900c987e5510944", null ],
    [ "ExchangeType_MIN", "namespace_xu_m_q.html#aee0aff534d6a141e6eb553bc20cf68df", null ],
    [ "HOSTNAME", "namespace_xu_m_q.html#a0f54bb87ebd81532b2055a29d7fb1311", null ],
    [ "log_init", "namespace_xu_m_q.html#ab48ee1fdcd2c301040d24a1642224a7d", null ],
    [ "logger", "namespace_xu_m_q.html#a1f0e7672a5105ab779a6abc4020cf31a", null ],
    [ "MSG_INVALID", "namespace_xu_m_q.html#a56075f1162065b026001954507eea6be", null ],
    [ "MSG_VALID", "namespace_xu_m_q.html#ad7908844b9b7da3ad295c14902d49f0c", null ],
    [ "TMPFILE_SUBFIX", "namespace_xu_m_q.html#adf00f6175ab7f0660677533d2499949a", null ]
];