var hierarchy =
[
    [ "XuMQ::BasicProperties::_Internal", "class_xu_m_q_1_1_basic_properties_1_1___internal.html", null ],
    [ "XuMQ::Message::_Internal", "class_xu_m_q_1_1_message_1_1___internal.html", null ],
    [ "XuMQ::Message_Payload::_Internal", "class_xu_m_q_1_1_message___payload_1_1___internal.html", null ],
    [ "XuMQ::BasicPropertiesDefaultTypeInternal", "struct_xu_m_q_1_1_basic_properties_default_type_internal.html", null ],
    [ "XuMQ::Exchange", "struct_xu_m_q_1_1_exchange.html", null ],
    [ "XuMQ::ExchangeManager", "class_xu_m_q_1_1_exchange_manager.html", null ],
    [ "XuMQ::ExchangeMapper", "class_xu_m_q_1_1_exchange_mapper.html", null ],
    [ "ExchangerMapper", "class_exchanger_mapper.html", null ],
    [ "XuMQ::FileHelper", "class_xu_m_q_1_1_file_helper.html", null ],
    [ "XuMQ::BasicProperties::Impl_", "struct_xu_m_q_1_1_basic_properties_1_1_impl__.html", null ],
    [ "XuMQ::Message::Impl_", "struct_xu_m_q_1_1_message_1_1_impl__.html", null ],
    [ "XuMQ::Message_Payload::Impl_", "struct_xu_m_q_1_1_message___payload_1_1_impl__.html", null ],
    [ "XuMQ::LogInit", "class_xu_m_q_1_1_log_init.html", null ],
    [ "PROTOBUF_NAMESPACE_ID::Message", null, [
      [ "XuMQ::BasicProperties", "class_xu_m_q_1_1_basic_properties.html", null ],
      [ "XuMQ::Message", "class_xu_m_q_1_1_message.html", null ],
      [ "XuMQ::Message_Payload", "class_xu_m_q_1_1_message___payload.html", null ]
    ] ],
    [ "XuMQ::Message_PayloadDefaultTypeInternal", "struct_xu_m_q_1_1_message___payload_default_type_internal.html", null ],
    [ "XuMQ::MessageDefaultTypeInternal", "struct_xu_m_q_1_1_message_default_type_internal.html", null ],
    [ "XuMQ::SqliteHelper", "class_xu_m_q_1_1_sqlite_helper.html", null ],
    [ "XuMQ::StrHelper", "class_xu_m_q_1_1_str_helper.html", null ],
    [ "TableStruct_msg_2eproto", "struct_table_struct__msg__2eproto.html", null ],
    [ "std::true_type", null, [
      [ "is_proto_enum< ::XuMQ::DeliveryMode >", "structis__proto__enum_3_01_1_1_xu_m_q_1_1_delivery_mode_01_4.html", null ],
      [ "is_proto_enum< ::XuMQ::ExchangeType >", "structis__proto__enum_3_01_1_1_xu_m_q_1_1_exchange_type_01_4.html", null ]
    ] ],
    [ "UUIDHelper", "class_u_u_i_d_helper.html", null ],
    [ "XuMQ::UUIDHelper", "class_xu_m_q_1_1_u_u_i_d_helper.html", null ]
];